Kubernetes/api-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: nate-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-deployment
  template:
    metadata:
      labels:
        app: api-deployment
    spec:
      containers:
        - name: api-deployment
          image: nhowell02/agentserver:${TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
