Kubernetes/client-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nate-agent
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: nhowell02/agentclient:latest
        ports:
        - containerPort: 8080
