Kubernetes/mcp-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-deployment
  namespace: nate-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-deployment
  template:
    metadata:
      labels:
        app: mcp-deployment
    spec:
      containers:
        - name: mcp-deployment
          image: nhowell02/nagent_mcp:${TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
