Kubernetes/api-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: nate-agent
spec:
  selector:
    app: api-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
