Kubernetes/client-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: nate-agent
spec:
  selector:
    app: client-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
